@@ -1,3 +1,6 @@
+2499 [Audio Encoder]        fixed TimeStretch support (regression of 2487)
+     [Audio Encoder]        enhanced logging
+     [Audio Encoder]        added 5.1 downmix if necessary (provided by tebasuna51)
 2498 [L-SMASH Indexer]      use the stream_index argument instead of track if using LWLibav*Source. Part II
 2497 [L-SMASH Indexer]      use the stream_index argument instead of track if using LWLibav*Source
 2496 [MainForm]             enabled Drag & Drop for folders
